<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".activity.InventActivity">

    <Button
        android:id="@+id/btnRemains"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inv_LoadRemains"
        app:layout_constraintBottom_toTopOf="@+id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inv_NameFAP"
        android:textSize="24sp"
        android:background="@color/green2"
        app:layout_constraintBottom_toTopOf="@+id/tvDoc"
        app:layout_constraintTop_toBottomOf="@id/btnRemains"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inv_DocInvent"
        android:textSize="24sp"
        android:background="@color/yellow2"
        app:layout_constraintBottom_toTopOf="@+id/tvReport"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inv_ReportInv"
        android:textSize="24sp"
        android:background="@color/yellow2"
        app:layout_constraintBottom_toTopOf="@+id/btnSaveFTP"
        app:layout_constraintTop_toBottomOf="@id/tvDoc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSaveFTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inv_SaveInvent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>