<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/available_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullNumber"
            android:textSize="24sp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/input_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Число целых"
            android:ems="3"
            android:hint="@string/numNumber"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textSize="24sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/available_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberParts"
            android:textSize="24sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/input_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Число частей"
            android:ems="3"
            android:hint="@string/partNumber"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>